--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ compatibility_date = "2022-11-22"
 account_id = "a0b1dba66816394c1b24cdfe05004bd2"
 
 [env.dev]
-vars = { ENVIRONMENT = "dev", SECRET_CREDENTIALS = "dGVzdDp0ZXN0" }
+vars = { ENVIRONMENT = "dev", SECRET_CREDENTIALS = "dGVzdDp0ZXN0=" }
 kv_namespaces = [
     { binding = "SHARED_LIST_ACTIVITY_TIMESTAMPS", id = "93f5a1ea47924e77960ef28c4b0e80c9", preview_id = "681e352605cd4b6785c98d17dce2e4f9" }
 ]
